--- a/dev/groupView.html
+++ b/dev/groupView.html
@@ -22,7 +22,7 @@
         @@include('./htmlTemplate/partinGroups.html')
     </div> -->
 </body>
-<script src="./js/carousel.js"></script>
+<!-- <script src="./js/carousel.js"></script> -->
 <!-- <script src="./js/hotsche_groupView.js"></script> -->
 <script src="./js/groupCard.js"></script>
 <script>
