--- a/dev/htmlTemplate/groupShow.html
+++ b/dev/htmlTemplate/groupShow.html
@@ -17,10 +17,10 @@
                     <p>London is the capital city of England.</p>
                 </aside>
                 <aside class="btnsAct">
-                    <button onclick="alert('已報名成功\n可前往會員中心查看報名結果喔！')"><img
-                            src="#">我要報名</button>
-                    <button><img src="#">分享此團</button>
-                    <button><img src="#">收藏此團</button>
+                    <button onclick="alert('已報名成功\n可前往會員中心查看報名結果喔！')" style="width:120px;height:40px;"><img
+                            src="./images/icon/people.png" style="width:30px;height:20px;margin:2px;">我要報名</button>
+                    <button style="width:120px;height:40px;"><img src="./images/icon/share.png" style="width:28px;height:23px;margin:2px;">分享此團</button>
+                    <button style="width:120px;height:40px;"><img src="./images/icon/whiteheart.png" style="width:28px;height:23px;margin:2px;">收藏此團</button>
                 </aside>
             </div>
             <hr>
