--- a/dev/htmlTemplate/mainGroupView.html
+++ b/dev/htmlTemplate/mainGroupView.html
@@ -164,9 +164,8 @@
             <!-- Group Main Start -->
             <!-- pc version start  -->
             <div class="groupViewPCcardBlock d-md-flex d-none">
-                <div id="groupCardsAll">
+                <div id="groupCardsAll" class="col-9 d-block">
                     <!-- 揪團卡片 -->
-
                     <div v-for="groupCard in groupCardsAlls" class="card
                         cardOriginalTem cardGroup">
                         <!-- <a  onclick="openpartinGroup();"> -->
