--- a/dev/htmlTemplate/mainMember.html
+++ b/dev/htmlTemplate/mainMember.html
@@ -19,7 +19,7 @@
                     <div class="memLeftHeadAdjust">修改會員資料</div>
                     <div class="memLeftPicAdjust" id="memLeftPicAdjust"></div>
 
-                    <!-- <input class="chooseFile" type="file"> -->
+                    <input class="chooseFile" type="file">
                     
                     <div class="memLeftNameAdjust" id="memLeftNameAdjust"></div>
                     <ul class="memLeftAdjustUl">
