--- a/dev/htmlTemplate/mainMember.html
+++ b/dev/htmlTemplate/mainMember.html
@@ -93,8 +93,8 @@
                     </div>
                     <div id="keepsche" class="keepContainer" style="display:none">
                         <div class="keepfilter_2">
-                            <button class="filterBtn">最新刊登&darr;</button>
-                            <button class="filterBtn">最高人氣&darr;</button>
+                            <button data-keepSort="scheNew" onclick="sortKeep(this)" class="filterBtn">最新刊登&darr;</button>
+                            <button data-keepSort="schePop" onclick="sortKeep(this)" class="filterBtn">最高人氣&darr;</button>
                         </div>
                         <!-- 行程收藏 -->
                         <div id="scheForKeep" class="keepAllWall" >
@@ -127,14 +127,13 @@
                     </div>
                     <div id="keepgroup" class="keepContainer" style="display:none">
                         <div class="keepfilter_2">
-                            <button class="filterBtn">最新刊登&darr;</button>
-                            <button class="filterBtn">最高評價&darr;</button>
+                            <button data-keepSort="groupNew" onclick="sortKeep(this)" class="filterBtn">最新刊登&darr;</button>
                         </div>
                         <!-- 揪團收藏 -->
                         <div id="groupForKeep" class="keepAllWall">
                             <!-- keep group start -->
                             <div v-for="keepGroup in keepGroups" class="card cardOriginalTem cardGroup" >
-                                <a>
+                                <a href="groupInside.html">
                                     <img :src="keepGroup.Group_Pic" class="card-img-top" >
                                     <div :data-id="keepGroup.Group_title" class="card-body card-img-overlay cardImgOverlayWebUse">
                                         <h5 class="card-title cardTitleWebUse">揪團</h5>
@@ -168,8 +167,8 @@
                     </div>
                     <div id="keepblog" class="keepContainer" style="display:none">
                         <div class="keepfilter_2">
-                            <button class="filterBtn">最新刊登&darr;</button>
-                            <button class="filterBtn">最高人氣&darr;</button>
+                            <button data-keepSort="blogNew" onclick="sortKeep(this)" class="filterBtn">最新刊登&darr;</button>
+                            <button data-keepSort="blogPop" onclick="sortKeep(this)" class="filterBtn">最高人氣&darr;</button>
                         </div>
                         <!-- 遊記收藏 -->
                         <div id="blogForKeep" class="keepAllWall">
@@ -296,5 +295,4 @@
         </div>
     </div>
 </div>
-
 
