--- a/dev/groupView.html
+++ b/dev/groupView.html
@@ -22,9 +22,9 @@
         @@include('./htmlTemplate/partinGroups.html')
     </div> -->
 </body>
-<!-- <script src="./js/carousel.js"></script> -->
+<script src="./js/carousel.js"></script>
 <!-- <script src="./js/hotsche_groupView.js"></script> -->
-<script src="./js/groupCard.js"></script>
+<!-- <script src="./js/groupCard.js"></script> -->
 <script>
     let setupGroup = document.getElementById("setupGroup");
 
