--- a/dev/htmlTemplate/mainGroupView.html
+++ b/dev/htmlTemplate/mainGroupView.html
@@ -165,7 +165,6 @@
             <!-- pc version start  -->
             <div class="groupViewPCcardBlock d-md-flex d-none">
                 <!-- 揪團卡片 -->
-
                 <div id="groupCardsAll">
                     <div v-for="groupCard in groupCardsAlls" class="card cardOriginalTem cardGroup">
                         <!-- <a  onclick="openpartinGroup();"> -->
@@ -190,8 +189,6 @@
                                     <p>出團日期：{{groupCard.Group_StartDate}}</p>
 
                                     <p>報名截止：{{groupCard.Group_Deadline}}</p>
-
-
                                 </div>
                             </div>
                         </a>
@@ -221,7 +218,7 @@
                                 <p class="card-text cardTextWebUse">日月潭<br><span style="font-weight: 300;">九族文化村和健行步道</span>
                                 </p>
                             </div>
-                            <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
+                            <a href="#" class="btn btn-primary">Go somewhere</a>
                         </div>
                         <div>
                             <div class="cardGroupContent">
