--- a/dev/htmlTemplate/mainGroupView.html
+++ b/dev/htmlTemplate/mainGroupView.html
@@ -199,50 +199,45 @@
         </div>
 
     </div>
-
-
 </div>
 <!-- pc version end -->
+
+
+
 <!-- phone vision start -->
 <div class="groupPhoneCardCarousel d-xl-none d-lg-none d-md-none">
     <div id="carouselPhoneGroupControls" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner innerCardScheGroupPhoneSlide">
-            <div class="carousel-item active">
-                <div class="card cardOriginalTem cardGroup d-block" style="width: 18rem;">
-                    <a>
-                        <img src="./images/lake.jpg" class="card-img-top" alt="...">
+            <div id="groupCardsAll" class="carousel-item active">
+                <div v-for="groupCard in groupCardsAlls" class="card cardOriginalTem cardGroup">
+                    <!-- <a  onclick="openpartinGroup();"> -->
+                    <a href="./groupInside.html">
+                        <img :src="groupCard.Group_Pic" class="card-img-top" alt="...">
                         <div class="card-body card-img-overlay
-                                        cardImgOverlayWebUse">
+                                cardImgOverlayWebUse">
                             <h5 class="card-title cardTitleWebUse">揪團</h5>
                             <div class="mask">
-                                <p class="card-text cardTextWebUse">日月潭<br><span style="font-weight: 300;">九族文化村和健行步道</span>
-                                </p>
+                                <p class="card-text cardTextWebUse">{{groupCard.Group_title}}<br></p>
                             </div>
-                            <a href="#" class="btn btn-primary">Go somewhere</a>
                         </div>
                         <div>
                             <div class="cardGroupContent">
-                                <p>團主：愛旅行</p>
+                                <p>團主：{{groupCard.Mem_Name}}</p>
                                 <div>
                                     <p>團主評價：
-                                        <img src="./images/good.png" alt="">
+                                        <img src="./images/good.png" alt=""> {{groupCard.hostlike}}
                                     </p>
 
                                 </div>
-                                <p>出團日期：2020/06/30</p>
+                                <p>出團日期：{{groupCard.Group_StartDate}}</p>
 
-                                <div>
-                                    <p>報名截止：2020/06/30</p>
-                                    <a>
-                                        <img src="./images/heart.png" alt="">
-                                    </a>
-                                </div>
+                                <p>報名截止：{{groupCard.Group_Deadline}}</p>
                             </div>
                         </div>
                     </a>
                 </div>
             </div>
-            <div class="carousel-item">
+            <!-- <div class="carousel-item">
                 <div class="card cardOriginalTem cardGroup d-block" style="width:
                                 18rem;">
                     <a>
@@ -251,10 +246,9 @@
                                         cardImgOverlayWebUse">
                             <h5 class="card-title cardTitleWebUse">揪團</h5>
                             <div class="mask">
-                                <p class="card-text cardTextWebUse">日月潭<br><span style="font-weight: 300;">九族文化村和健行步道</span>
+                                <p class="card-text cardTextWebUse">日月潭2<br><span style="font-weight: 300;">九族文化村和健行步道</span>
                                 </p>
                             </div>
-                            <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
                         </div>
                         <div>
                             <div class="cardGroupContent">
@@ -277,8 +271,8 @@
                         </div>
                     </a>
                 </div>
-            </div>
-            <div class="carousel-item">
+            </div> -->
+            <!-- <div class="carousel-item">
                 <div class="card cardOriginalTem cardGroup d-block" style="width: 18rem;">
                     <a href="">
                         <img src="./images/lake.jpg" class="card-img-top" alt="...">
@@ -286,10 +280,9 @@
                                         cardImgOverlayWebUse">
                             <h5 class="card-title cardTitleWebUse">揪團</h5>
                             <div class="mask">
-                                <p class="card-text cardTextWebUse">日月潭<br><span style="font-weight: 300;">九族文化村和健行步道</span>
+                                <p class="card-text cardTextWebUse">日月潭3<br><span style="font-weight: 300;">九族文化村和健行步道</span>
                                 </p>
                             </div>
-                            <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
                         </div>
                         <div>
                             <div class="cardGroupContent">
@@ -312,7 +305,7 @@
                         </div>
                     </a>
                 </div>
-            </div>
+            </div> -->
         </div>
         <a class="carousel-control-prev" href="#carouselPhoneGroupControls" role="button" data-slide="prev">
             <span class="carousel-control-prev-icon
@@ -326,7 +319,7 @@
         </a>
     </div>
 </div>
-<div class="groupPhoneCardCarousel d-xl-none d-lg-none d-md-none">
+<!-- <div class="groupPhoneCardCarousel d-xl-none d-lg-none d-md-none">
     <div id="carouselPhoneScheControls" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner innerCardSchePhoneSlide">
             <div class="carousel-item active fixHeight4others">
@@ -339,7 +332,6 @@
                             <div class="mask">
                                 <p class="card-text cardTextWebUse">日月潭<br><span style="font-weight: 300;">九族文化村和健行步道</span></p>
                             </div>
-                            <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
                         </div>
                         <div>
                             <div class="cardScheduleContent">
@@ -367,7 +359,6 @@
                             <div class="mask">
                                 <p class="card-text cardTextWebUse">日月潭<br><span style="font-weight: 300;">九族文化村和健行步道</span></p>
                             </div>
-                            <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
                         </div>
                         <div>
                             <div class="cardScheduleContent">
@@ -395,7 +386,6 @@
                             <div class="mask">
                                 <p class="card-text cardTextWebUse">日月潭<br><span style="font-weight: 300;">九族文化村和健行步道</span></p>
                             </div>
-                            <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
                         </div>
                         <div>
                             <div class="cardScheduleContent">
@@ -425,7 +415,7 @@
             <span class="sr-only">Next</span>
         </a>
     </div>
-</div>
+</div> -->
 <!-- phone version end -->
 <!-- Group Main End -->
 
