--- a/dev/htmlTemplate/mainMember.html
+++ b/dev/htmlTemplate/mainMember.html
@@ -16,7 +16,7 @@
             </div>
             <div class="memLeftAdjust" id="memLeftAdjust">
                 <form action="adjustMemberInfo.php" method="post" id="memLeftAdjustForm" name="memLeftAdjustForm" enctype="multipart/form-data">
-                    <div class="memLeftHeadAdjust">修改會員資料</div>
+                    <div class="memLeftHeadAdjust">修改個人資料</div>
                     <div class="memLeftPicAdjust" id="memLeftPicAdjust"></div>
 
                     <label class="chooseFile" id="chooseFileLabel">選擇大頭照<input type="file" name="chooseFile" id="chooseFile"></label>    
