--- a/dev/htmlTemplate/mainGroupView.html
+++ b/dev/htmlTemplate/mainGroupView.html
@@ -219,7 +219,6 @@
                                 <p class="card-text cardTextWebUse">日月潭<br><span style="font-weight: 300;">九族文化村和健行步道</span>
                                 </p>
                             </div>
-                            <a href="#" class="btn btn-primary">Go somewhere1</a>
                         </div>
                         <div>
                             <div class="cardGroupContent">
@@ -255,7 +254,6 @@
                                 <p class="card-text cardTextWebUse">日月潭<br><span style="font-weight: 300;">九族文化村和健行步道</span>
                                 </p>
                             </div>
-                            <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
                         </div>
                         <div>
                             <div class="cardGroupContent">
@@ -290,7 +288,74 @@
                                 <p class="card-text cardTextWebUse">日月潭<br><span style="font-weight: 300;">九族文化村和健行步道</span>
                                 </p>
                             </div>
-                            <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
+                        </div>
+                        <div>
+                            <div class="cardGroupContent">
+                                <p>團主：愛旅行</p>
+                                <div>
+                                    <p>團主評價：
+                                        <img src="./images/good.png" alt="">
+                                    </p>
+
+                                </div>
+                                <p>出團日期：2020/06/30</p>
+
+                                <div>
+                                    <p>報名截止：2020/06/30</p>
+                                    <a href="">
+                                        <img src="./images/heart.png" alt="">
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <div class="card cardOriginalTem cardGroup d-block" style="width: 18rem;">
+                    <a href="">
+                        <img src="./images/lake.jpg" class="card-img-top" alt="...">
+                        <div class="card-body card-img-overlay
+                                        cardImgOverlayWebUse">
+                            <h5 class="card-title cardTitleWebUse">揪團</h5>
+                            <div class="mask">
+                                <p class="card-text cardTextWebUse">日月潭5<br><span style="font-weight: 300;">九族文化村和健行步道</span>
+                                </p>
+                            </div>
+                        </div>
+                        <div>
+                            <div class="cardGroupContent">
+                                <p>團主：愛旅行</p>
+                                <div>
+                                    <p>團主評價：
+                                        <img src="./images/good.png" alt="">
+                                    </p>
+
+                                </div>
+                                <p>出團日期：2020/06/30</p>
+
+                                <div>
+                                    <p>報名截止：2020/06/30</p>
+                                    <a href="">
+                                        <img src="./images/heart.png" alt="">
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <div class="card cardOriginalTem cardGroup d-block" style="width: 18rem;">
+                    <a href="">
+                        <img src="./images/lake.jpg" class="card-img-top" alt="...">
+                        <div class="card-body card-img-overlay
+                                        cardImgOverlayWebUse">
+                            <h5 class="card-title cardTitleWebUse">揪團</h5>
+                            <div class="mask">
+                                <p class="card-text cardTextWebUse">日月潭<br><span style="font-weight: 300;">九族文化村和健行步道</span>
+                                </p>
+                            </div>
                         </div>
                         <div>
                             <div class="cardGroupContent">
